수정본입니다

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     <div class="mobile_menu">
         <button class="mobile_close"><i class="fas fa-times"></i></button>
         <ul class="mobile_gnb">
-            <li><a href="#">lotte</a></li>
-            <li><a href="#">resort</a></li>
-            <li><a href="#">products</a></li>
-            <li><a href="#">news&events</a></li>
+            <li><a href="#lotte">lotte</a></li>
+            <li><a href="#resort">resort</a></li>
+            <li><a href="#products">products</a></li>
+            <li><a href="#news&events">news&events</a></li>
         </ul>
     </div>
 
@@ -63,10 +63,10 @@
                 <a href="#" class="logo">nexus</a>
                 <nav class="nav">
                     <ul class="gnb">
-                        <li><a href="#">lotte</a></li>
-                        <li><a href="#">resort</a></li>
-                        <li><a href="#">products</a></li>
-                        <li><a href="#">news&events</a></li>
+                        <li><a href="#lotte">lotte</a></li>
+                        <li><a href="#resort">resort</a></li>
+                        <li><a href="#products">products</a></li>
+                        <li><a href="#news&events">news&events</a></li>
                     </ul>
                     <button class="gnb_mobile">
                         <i class="fas fa-th"></i>
@@ -116,7 +116,7 @@
 
 
         <!-- contents -->
-        <section class="contents">
+        <section class="contents" id="lotte">
             <div class="container">
                 <div class="contents_box contents_1">
                     <p class="contents_tit1">DA GROUP</p>
@@ -135,7 +135,7 @@
                     <p class="contents_tit1">켄고 쿠마</p>
                     <a href="#" class="contents_link"></a>
                 </div>
-                <div class="contents_box contents_4 contents_up">
+                <div class="contents_box contents_4 contents_up" >
                     <p class="contents_tit1">이종호</p>
                     <a href="#" class="contents_link"></a>
                 </div>
@@ -143,7 +143,7 @@
                     <p class="contents_tit1">도미니크 페로</p>
                     <a href="#" class="contents_link"></a>
                 </div>
-                <div class="contents_box contents_6 contents_up">
+                <div class="contents_box contents_6 contents_up" id="products">
                     <p class="contents_tit1">펜트하우스</p>
                     <a href="#" class="contents_link"></a>
                 </div>
@@ -152,7 +152,7 @@
                         기품과 품위가 있는 롯데에서<br>  햇살과 공기를 느낄 수 있는 객실
                     </p>                    
 
-                    <a href="#" class="contents_more_link"><span>VIEW MORE</span> <i class="fas fa-plus"></i></a>
+                    <a href="#" class="contents_more_link" ><span>VIEW MORE</span> <i class="fas fa-plus"></i></a>
 
                 </div>
                 <div class="contents_box contents_8 contents_up">
@@ -171,7 +171,7 @@
 
 
         <!-- gallery -->
-        <section class="gallery">
+        <section class="gallery"  id="resort" >
             <div class="container">
                 <p class="gallery_txt1">LOTTLE RESORT</p>
                 <p class="gallery_txt2">THE ART IN RESORT,<br>
@@ -184,11 +184,11 @@
        
    
         <!-- footer -->
-        <footer class="footer">
+        <footer class="footer" id="news&events">
 
 
             <!-- address -->
-            <section class="addr">
+            <section class="addr" >
                 <div class="container">
                     <a href="#" class="f_logo">
                         <img src="images/logo_01.png" alt="">
